# enterprise-pcf-platform

./: .env.example  .env.openlca.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.openlca.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  audit.py  auth.py  celery_app.py  config.py  db.py  main.py  models.py  schemas.py  storage.py  tasks.py  utils.py
app/api/: admin.py  calculations.py  health.py  imports.py  products.py
app/core/: auth.py  config.py  db.py  dependencies.py  exceptions.py  immutability.py  logging.py  metrics.py  middleware.py  request_context.py
app/engines/: __init__.py  base.py  mock.py  openlca.py
app/infrastructure/: celery.py  storage.py
app/modules/: __init__.py  model_base.py
app/modules/calculations/: __init__.py  contracts.py  models.py  schemas.py
app/modules/catalog/: __init__.py  models.py  schemas.py  units.py
app/modules/imports/: __init__.py  contracts.py  excel.py  models.py  schemas.py
app/modules/snapshots/: __init__.py  contracts.py  schemas.py
app/services/: approval_service.py  calculation_service.py  export_service.py  import_service.py  outbox_service.py  snapshot_service.py
docs/: INT-WD-001-data-readiness.md  PCF-Platform-项目介绍与本地运行.md  gdt-server-rest-api-reference.html  openlca-local-development.md  pcf-platform-technical-architecture.drawio
java-platform/: .env.example  .gitignore  Dockerfile  README.md  pom.xml
java-platform/docs/: java-architecture.md
java-platform/src/main/java/com/airpaq/pcf/: PcfPlatformApplication.java
java-platform/src/main/resources/: application.yml  logback-spring.xml
java-platform/src/main/resources/db/migration/: V1__python_compatible_schema.sql  V2__reliable_calculations.sql  V3__java_migration_marker.sql
java-platform/src/test/java/com/airpaq/pcf/: ApiPathContractTest.java  ApplicationModulesTest.java  (+2 more)
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_reliable_calculations.py
scripts/: __init__.py  openlca-inspect.py  openlca-local.ps1  openlca_inspect.py
tests/: __init__.py  conftest.py  helpers.py  openapi.snapshot.sha256  openlca-case.example.json  test_architecture_hardening.py  test_auth.py  test_contracts.py  test_import.py  test_infrastructure_integration.py  test_openlca_engine_unit.py  test_openlca_inspect.py  test_openlca_integration.py  test_validation.py  test_workflow.py
(+161 files in other folders)
