[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-pcf-platform"
version = "0.1.0"
description = "Auditable enterprise PCF middleware for openLCA REST"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "boto3>=1.35,<2",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "olca-ipc>=2.4,<3",
  "openpyxl>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "PyJWT[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

