[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-pcf-platform"
version = "0.1.0"
description = "Auditable enterprise PCF middleware for openLCA REST"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "boto3>=1.35,<2",
  "celery[redis]>=5.4,<6",
  "fastapi==0.138.0",
  "httpx>=0.28,<1",
  "olca-ipc>=2.4,<3",
  "openpyxl>=3.1,<4",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic==2.13.4",
  "pydantic-settings>=2.7,<3",
  "PyJWT[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "requests>=2.33,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "openlca_integration: requires an explicitly configured real openLCA REST service",
  "infrastructure: requires PostgreSQL, Redis, or S3-compatible object storage",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501", "UP017", "UP042"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["migrations/"]
